# couchbase-haystack

./: .changelogrc  .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  pyproject.toml  sitemap.xml
.chglog/: CHANGELOG-ACTION.tpl.md  config-action.yml  config.yml
.github/: release-changelog-config.yml
.github/workflows/: ci.yml  gh_pages.yml  realease.yml
assets/css/: styles.38997102.css
assets/js/: 15312e2f.dc58bed0.js  17896441.160e764f.js  1952605d.ded4e4df.js  1952605d.e0fe4d20.js  22dd74f7.362c331f.js  237.46307139.js  420bf7a8.478420ea.js  420bf7a8.fca6ca4f.js  4e67881d.6622ef11.js  4e67881d.9ff515ad.js  4e67881d.efed3584.js  5e95c892.2d53526a.js  6abd9f7a.0c02eaa3.js  6f6bf398.2d4ff5b7.js  6f6bf398.abbc2a5b.js  7c568fbf.57b612cc.js  7c568fbf.61efb670.js  7c568fbf.7bd513a1.js  a7456010.d6713c8e.js  a7bd4aaa.fd1965ff.js  a94703ab.41f87a93.js  aba21aa0.06c69b19.js  b3a0cff9.4cb1447f.js  b3a0cff9.9abcef57.js  b9811eca.05d26461.js  b9811eca.21c7ba43.js  b9811eca.d37360d8.js  b9811eca.edc08bf4.js  main.1519016c.js  main.16cfa8ce.js  main.1ac45a0f.js  main.95b28bd3.js  main.9ac565fe.js  runtime~main.1cebbbd2.js  runtime~main.33c22bba.js  runtime~main.63876ee6.js  runtime~main.ca378440.js  runtime~main.e6afff34.js
changelog/: index.html
docusaurus/couchbase-haystack/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docusaurus/couchbase-haystack/docs/home/: _category_.json  changelog.md  overview.md
docusaurus/couchbase-haystack/docs/reference/: _category_.json  authentication.md  cluster_options.md  couchbase_document_store.md  couchbase_embedding_retriever.md  document_filter.md
docusaurus/couchbase-haystack/src/css/: custom.css
docusaurus/couchbase-haystack/src/pages/: index_modified to change base url.tsx
examples/: indexing_pipeline.py  rag_pipeline.py
index_modified%20to%20change%20base%20url/: index.html
reference/authentication/: index.html
reference/cluster_options/: index.html
reference/couchbase_document_store/: index.html
reference/couchbase_embedding_retriever/: index.html
reference/document_filter/: index.html
src/couchbase_haystack/: __init__.py
src/couchbase_haystack/components/retrievers/: __init__.py  embedding_retriever.py
src/couchbase_haystack/document_stores/: __init__.py  auth.py  cluster_options.py  document_store.py  filters.py
tests/: __init__.py  test_auth.py  test_cluster_options.py  test_document_store.py  test_document_store_unit.py  test_embedding_retrieval.py  test_filter.py  test_retriever.py  vector_index.json
tests/common/: common.py
